# FoxSYN

./: .clang-format  .clangd  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  README.md
.github/: copilot-instructions.md
docs/: CSR_CLAUDE_HANDOFF.md  abc_pdb.md  cmfs.md  csr-relocation-design.md  csr-relocation-plan.md  csr-swap-relocation-design.md  csr.md  csr2.md  csr3-phase0-design.md  csr3-phase0-plan.md  csr3.md  curvemap.md  hpart.md  pdecomp-design.md  ttopt.md  ttopt_imp.md  ttsatopt.md
docs/superpowers/plans/: 2026-07-11-csr-optimization-enhancement.md
docs/superpowers/specs/: 2026-07-11-csr-optimization-enhancement-design.md
regression/: FoxSYN  abc.rc  and.v  cps.v  hpart_baseline.json
regression/src/: diff.py  launch.py  regression.py
scripts/: run_cmfs_regression.py  run_csr3_measure.py  run_csr_regression.py  run_hpart_baseline.py  run_hpart_regression.py  run_pdecomp_csr_comparison.py
src/: CMakeLists.txt  main.cpp  test_cpr.cpp  test_csr.cpp  test_csr2.cpp  test_csr3.cpp  test_dot.cpp  test_hop.cpp  test_verilog.cpp
src/abc/src/base/abc/: abc.h  abcFanio.c  abcFunc.c  abcNtk.c  abcObj.c  abcPdb.cpp
src/abc/src/base/abci/: abcPrint.c
src/agdmap/: AgdmapCommand.cpp  AgdmapCommand.h  CMakeLists.txt  REVIEW.md  agdmap.cpp  agdmap.h  utility.h
src/cmfs/: CMakeLists.txt  cmfs.cpp  cmfs.hpp
src/cpr/: CMakeLists.txt  cpr.cpp  cpr.hpp
src/csr/: CMakeLists.txt  csr.cpp  csr.hpp  csr_hop.cpp  csr_internal.hpp  csr_state.cpp
src/csr2/: CMakeLists.txt  csr2.cpp  csr2.hpp  csr2_hop.cpp  csr2_internal.hpp  csr2_state.cpp
src/csr3/: CMakeLists.txt  csr3.cpp  csr3.hpp  csr3_internal.hpp
src/curvemap/: CMakeLists.txt  curvemap.cpp  curvemap.h  map.cc  map.h
src/fox/: CMakeLists.txt  abc.hpp  cut.cpp  foxmap.cpp  foxmap.hpp  node.cpp  utility.hpp
src/hpart/: CMakeLists.txt  hpart.cpp  hpart.hpp
src/partsyn/: CMakeLists.txt  README.md  partsyn.cpp  partsyn.hpp
src/pdecomp/: CMakeLists.txt  pdecomp.cpp  pdecomp.hpp
src/supper/: CMakeLists.txt  agdmap.cpp  agdmap.hpp  basic.hpp  cut.cpp  cut.hpp  format.hpp  foxmap.cpp  foxmap.hpp  graph.cpp  graph.hpp  macros.hpp  map.cpp  map.hpp  mapping_graph.cpp  mapping_graph.hpp  node.cpp  prune.cpp  prune.hpp  simple_gate.hpp  utility.hpp
src/timer/: CMakeLists.txt  timer.cpp  timer.hpp
